Fix extra drawer spacing

--- a/packages/commonwealth/client/scripts/views/pages/Communities/TokenLaunchDrawer/TokenLaunchDrawer.scss
+++ b/packages/commonwealth/client/scripts/views/pages/Communities/TokenLaunchDrawer/TokenLaunchDrawer.scss
@@ -13,8 +13,6 @@
     }
 
     @include mediumSmall {
-      top: 48px !important;
-
       > .QuickTokenLaunchForm {
         padding: 0 16px;
       }
